static html for jobs list page

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@mantine/notifications": "^8.3.9",
     "@mantine/nprogress": "^8.3.9",
     "@mantine/tiptap": "^8.3.9",
+    "@tabler/icons-react": "^3.35.0",
     "@tiptap/extension-link": "^3.12.1",
     "@tiptap/pm": "^3.12.1",
     "@tiptap/react": "^3.12.1",
     "@tiptap/starter-kit": "^3.12.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
